Renaming .kitchen.docker.yml to .kitchen.dokken.yml PLEASE STOP RENAMING THIS to .kitchen.docker.yml.
1) They are two completely different plugins. Having a naming mismatch
creates confusion.

2) From the kitchen-dokken README under USAGE:

```
Add the following to your ~/.bash_profile
  export KITCHEN_YAML=.kitchen.yml
  export KITCHEN_LOCAL_YAML=.kitchen.dokken.yml
```

3) With the above settings, if you cd into a cookbook with a
.kitchen.dokkken.yml, it will automatically pick up and use the dokken
config. Otherwise it defaults to Vagarnt.

4) Doing "cd mysql ; kitchen verify smoke -c" explodes laptops under
Vagrant.

Signed-off-by: Sean OMeara <sean@sean.io>

--- a/.travis.yml
+++ b/.travis.yml
@@ -60,7 +60,7 @@ before_script:
   - eval "$(/opt/chefdk/bin/chef shell-init bash)"
   - /opt/chefdk/embedded/bin/chef --version
 
-script: KITCHEN_LOCAL_YAML=.kitchen.docker.yml /opt/chefdk/embedded/bin/kitchen verify ${INSTANCE}
+script: KITCHEN_LOCAL_YAML=.kitchen.dokken.yml /opt/chefdk/embedded/bin/kitchen verify ${INSTANCE}
 
 matrix:
   include:
