--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,9 @@ branches:
 services: docker
 
 env:
+  global:
+  - KITCHEN_YAML=.kitchen.yml
+  - KITCHEN_LOCAL_YAML=.kitchen.docker.yml
   matrix:
   - INSTANCE=smoke51-centos-6
   - INSTANCE=smoke55-centos-6
@@ -28,13 +31,13 @@ env:
   - INSTANCE=smoke55-ubuntu-1404
   - INSTANCE=smoke56-centos-6
   - INSTANCE=smoke56-centos-7
-  - INSTANCE=smoke56-fedora-24
+  - INSTANCE=smoke56-fedora-25
   - INSTANCE=smoke56-ubuntu-1404
   - INSTANCE=smoke56-opensuse-132
   - INSTANCE=smoke56-opensuse-leap
   - INSTANCE=smoke57-centos-6
   - INSTANCE=smoke57-centos-7
-  - INSTANCE=smoke57-fedora-24
+  - INSTANCE=smoke57-fedora-25
   - INSTANCE=smoke57-ubuntu-1604
   - INSTANCE=installation-client-package-51-centos-6
   - INSTANCE=installation-client-package-55-centos-6
@@ -44,13 +47,13 @@ env:
   - INSTANCE=installation-client-package-55-ubuntu-1404
   - INSTANCE=installation-client-package-56-centos-6
   - INSTANCE=installation-client-package-56-centos-7
-  - INSTANCE=installation-client-package-56-fedora-24
+  - INSTANCE=installation-client-package-56-fedora-25
   - INSTANCE=installation-client-package-56-ubuntu-1404
   - INSTANCE=installation-client-package-56-opensuse-132
   - INSTANCE=installation-client-package-56-opensuse-leap
   - INSTANCE=installation-client-package-57-centos-6
   - INSTANCE=installation-client-package-57-centos-7
-  - INSTANCE=installation-client-package-57-fedora-24
+  - INSTANCE=installation-client-package-57-fedora-25
   - INSTANCE=installation-client-package-57-ubuntu-1604
 
 before_script:
@@ -60,7 +63,7 @@ before_script:
   - /opt/chefdk/embedded/bin/cookstyle --version
   - /opt/chefdk/embedded/bin/foodcritic --version
 
-script: KITCHEN_LOCAL_YAML=.kitchen.dokken.yml /opt/chefdk/embedded/bin/kitchen verify ${INSTANCE}
+script: /opt/chefdk/embedded/bin/kitchen verify ${INSTANCE}
 
 matrix:
   include:
