--- a/.kitchen.dokken.yml
+++ b/.kitchen.dokken.yml
@@ -52,7 +52,7 @@ platforms:
       image: fedora:25
       pid_one_command: /usr/lib/systemd/systemd
       intermediate_instructions:
-        - RUN dnf -y install yum which systemd-sysv initscripts wget net-tools
+        - RUN dnf -y install which systemd-sysv initscripts wget net-tools
 
   - name: ubuntu-14.04
     driver:
@@ -71,13 +71,6 @@ platforms:
       intermediate_instructions:
         - RUN /usr/bin/apt-get update
         - RUN /usr/bin/apt-get install apt-transport-https lsb-release procps net-tools -y
-
-  - name: opensuse-13.2
-    driver:
-      image: opensuse:13.2
-      pid_one_command: /bin/systemd
-      intermediate_instructions:
-        - RUN zypper --non-interactive install aaa_base perl-Getopt-Long-Descriptive which net-tools
 
   - name: opensuse-leap
     driver:
