--- a/.travis.yml
+++ b/.travis.yml
@@ -30,13 +30,12 @@ env:
   - INSTANCE=smoke55-ubuntu-1404
   - INSTANCE=smoke56-centos-6
   - INSTANCE=smoke56-centos-7
-  - INSTANCE=smoke56-fedora-24
+  #- INSTANCE=smoke56-fedora-24
   - INSTANCE=smoke56-ubuntu-1404
-  - INSTANCE=smoke56-opensuse-132
   - INSTANCE=smoke56-opensuse-leap
   - INSTANCE=smoke57-centos-6
   - INSTANCE=smoke57-centos-7
-  - INSTANCE=smoke57-fedora-24
+  #- INSTANCE=smoke57-fedora-24
   - INSTANCE=smoke57-ubuntu-1604
   - INSTANCE=installation-client-package-51-centos-6
   - INSTANCE=installation-client-package-55-centos-6
@@ -46,13 +45,12 @@ env:
   - INSTANCE=installation-client-package-55-ubuntu-1404
   - INSTANCE=installation-client-package-56-centos-6
   - INSTANCE=installation-client-package-56-centos-7
-  - INSTANCE=installation-client-package-56-fedora-24
+  #- INSTANCE=installation-client-package-56-fedora-24
   - INSTANCE=installation-client-package-56-ubuntu-1404
-  - INSTANCE=installation-client-package-56-opensuse-132
   - INSTANCE=installation-client-package-56-opensuse-leap
   - INSTANCE=installation-client-package-57-centos-6
   - INSTANCE=installation-client-package-57-centos-7
-  - INSTANCE=installation-client-package-57-fedora-24
+  #- INSTANCE=installation-client-package-57-fedora-24
   - INSTANCE=installation-client-package-57-ubuntu-1604
 
 before_script:
