--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,8 +1,8 @@
 <%
 dists_with_51 = %w(centos-6)
-dists_with_55 = %w(centos-6 centos-7 debian-7 debian-8 ubuntu-14.04)
-dists_with_56 = %w(centos-6 centos-7 fedora-25 ubuntu-14.04 opensuse-leap amazon-linux)
-dists_with_57 = %w(centos-6 centos-7 fedora-25 ubuntu-16.04)
+dists_with_55 = %w(centos-6 centos-7 debian-8 ubuntu-14.04)
+dists_with_56 = %w(centos-6 centos-7 fedora-27 ubuntu-14.04 opensuse-leap amazon-linux)
+dists_with_57 = %w(centos-6 centos-7 fedora-27 ubuntu-16.04)
 %>
 ---
 driver:
@@ -19,45 +19,34 @@ verifier:
 
 platforms:
   - name: centos-6
-    driver:
-      box: bento/centos-6
     run_list:
       - recipe[selinux::disabled]
       - recipe[mysql_test::yum_repo]
 
   - name: centos-7
-    driver:
-      box: bento/centos-7
     run_list:
       - recipe[selinux::disabled]
       - recipe[mysql_test::yum_repo]
 
-  - name: debian-7
-    driver:
-      box: bento/debian-7.11
 
   - name: debian-8
-    driver:
-      box: bento/debian-8.8
+  
+  - name: debian-9
 
-  - name: fedora-26
-    driver:
-      box: bento/fedora-25
+  - name: fedora-27
     run_list:
       - recipe[selinux::disabled]
       - recipe[mysql_test::yum_repo]
 
   - name: opensuse-leap
     driver:
-      box: bento/opensuse-leap-42.2
+      box: bento/opensuse-leap-42
 
   - name: ubuntu-14.04
-    driver:
-      box: bento/ubuntu-14.04
 
   - name: ubuntu-16.04
-    driver:
-      box: bento/ubuntu-16.04
+  
+  - name: ubuntu-18.04
 
   - name: amazonlinux
     driver_config:
