--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,6 +1,9 @@
 <%
-dists_with_56 = %w(centos-6 centos-7 fedora-28 ubuntu-14.04 opensuse-leap amazon-linux)
-dists_with_57 = %w(centos-6 centos-7 fedora-28 ubuntu-16.04)
+yum_dists_with_56 = %w(centos-6 centos-7 fedora-28 amazon-linux)
+suse_dists_with_56 = %w(opensuse-leap)
+apt_dists_with_56 = %w(ubuntu-14.04)
+yum_dists_with_57 = %w(centos-6 centos-7 fedora-28 fedora-latest)
+apt_dists_with_57 = %w(ubuntu-16.04 ubuntu-18.04)
 %>
 ---
 driver:
@@ -36,39 +39,48 @@ suites:
   #
   - name: installation_client_package-56
     run_list:
-    - recipe[mysql_test::installation_client]
+    - recipe[test::installation_client]
     attributes:
       mysql:
        version: '5.6'
-    includes: <%= dists_with_56 %>
+    includes: <%= apt_dists_with_56 %>
 
   - name: installation_client_package-57
     run_list:
-    - recipe[mysql_test::installation_client]
+    - recipe[test::installation_client]
     attributes:
       mysql:
        version: '5.7'
-    includes: <%= dists_with_57 %>
+    includes: <%= apt_dists_with_57 %>
 
   - name: installation_client_package-56-yum
     run_list:
     - recipe[selinux::disabled]
-    - recipe[mysql_test::yum_repo]
-    - recipe[mysql_test::installation_client]
+    - recipe[test::yum_repo]
+    - recipe[test::installation_client]
     attributes:
       mysql:
        version: '5.6'
-    includes: <%= dists_with_56 %>
+    includes: <%= yum_dists_with_56 %>
+
+  - name: installation_client_package-56-suse
+    run_list:
+    - recipe[test::yum_repo]
+    - recipe[test::installation_client]
+    attributes:
+      mysql:
+       version: '5.6'
+    includes: <%= suse_dists_with_56 %>
 
   - name: installation_client_package-57-yum
     run_list:
     - recipe[selinux::disabled]
-    - recipe[mysql_test::yum_repo]
-    - recipe[mysql_test::installation_client]
+    - recipe[test::yum_repo]
+    - recipe[test::installation_client]
     attributes:
       mysql:
        version: '5.7'
-    includes: <%= dists_with_57 %>
+    includes: <%= yum_dists_with_57 %>
 
   #
   # server smoke
@@ -76,38 +88,45 @@ suites:
 
   - name: smoke56
     run_list:
-      - recipe[mysql_test::smoke]
+      - recipe[test::smoke]
     attributes:
       mysql:
        version: '5.6'
-    includes: <%= dists_with_56 %>
+    includes: <%= apt_dists_with_56 %>
 
   - name: smoke57
     run_list:
-      - recipe[mysql_test::smoke]
-      - recipe[selinux::disabled]
-      - recipe[mysql_test::yum_repo]
+      - recipe[test::smoke]
     attributes:
       mysql:
        version: '5.7'
-    includes: <%= dists_with_57 %>
+    includes: <%= apt_dists_with_57 %>
 
   - name: smoke56-yum
     run_list:
       - recipe[selinux::disabled]
-      - recipe[mysql_test::yum_repo]
-      - recipe[mysql_test::smoke]
+      - recipe[test::yum_repo]
+      - recipe[test::smoke]
     attributes:
       mysql:
        version: '5.6'
-    includes: <%= dists_with_56 %>
+    includes: <%= yum_dists_with_56 %>
+
+  - name: smoke56-suse
+    run_list:
+      - recipe[test::yum_repo]
+      - recipe[test::smoke]
+    attributes:
+      mysql:
+       version: '5.6'
+    includes: <%= suse_dists_with_56 %>
 
   - name: smoke57-yum
     run_list:
       - recipe[selinux::disabled]
-      - recipe[mysql_test::yum_repo]
-      - recipe[mysql_test::smoke]
+      - recipe[test::yum_repo]
+      - recipe[test::smoke]
     attributes:
       mysql:
        version: '5.7'
-    includes: <%= dists_with_57 %>
+    includes: <%= yum_dists_with_57 %>
