Fix initial password issues in MySQL 5.7+This is exactly the same as #584 but squashed without the MySQL 8.0changes, which should make it much easier to merge.

--- a/kitchen.yml
+++ b/kitchen.yml
@@ -1,5 +1,5 @@
 <%
-yum_dists_with_56 = %w(centos-6 centos-7 fedora-28 amazon-linux)
+yum_dists_with_56 = %w(centos-6 centos-7 amazon-linux)
 suse_dists_with_56 = %w(opensuse-leap)
 apt_dists_with_56 = %w(ubuntu-14.04)
 yum_dists_with_57 = %w(centos-6 centos-7 fedora-28 fedora-latest)
@@ -42,7 +42,7 @@ suites:
       - recipe[test::installation_client]
     attributes:
       mysql:
-      version: '5.6'
+        version: '5.6'
     includes: <%= apt_dists_with_56 %>
 
   - name: installation_client_package-57
@@ -50,7 +50,7 @@ suites:
       - recipe[test::installation_client]
     attributes:
       mysql:
-      version: '5.7'
+        version: '5.7'
     includes: <%= apt_dists_with_57 %>
 
   - name: yum-installation_client_package-56
@@ -60,7 +60,7 @@ suites:
       - recipe[test::installation_client]
     attributes:
       mysql:
-      version: '5.6'
+        version: '5.6'
     includes: <%= yum_dists_with_56 %>
 
   - name: suse-installation_client_package-56
@@ -69,7 +69,7 @@ suites:
       - recipe[test::installation_client]
     attributes:
       mysql:
-      version: '5.6'
+        version: '5.6'
     includes: <%= suse_dists_with_56 %>
 
   - name: yum-installation_client_package-57
@@ -79,7 +79,7 @@ suites:
       - recipe[test::installation_client]
     attributes:
       mysql:
-      version: '5.7'
+        version: '5.7'
     includes: <%= yum_dists_with_57 %>
 
   #
@@ -91,7 +91,7 @@ suites:
       - recipe[test::smoke]
     attributes:
       mysql:
-      version: '5.6'
+        version: '5.6'
     includes: <%= apt_dists_with_56 %>
 
   - name: smoke57
@@ -99,7 +99,7 @@ suites:
       - recipe[test::smoke]
     attributes:
       mysql:
-      version: '5.7'
+        version: '5.7'
     includes: <%= apt_dists_with_57 %>
 
   - name: yum-smoke56
@@ -109,7 +109,7 @@ suites:
       - recipe[test::smoke]
     attributes:
       mysql:
-      version: '5.6'
+        version: '5.6'
     includes: <%= yum_dists_with_56 %>
 
   - name: suse-smoke56
@@ -118,7 +118,7 @@ suites:
       - recipe[test::smoke]
     attributes:
       mysql:
-      version: '5.6'
+        version: '5.6'
     includes: <%= suse_dists_with_56 %>
 
   - name: yum-smoke57
@@ -128,5 +128,5 @@ suites:
       - recipe[test::smoke]
     attributes:
       mysql:
-      version: '5.7'
+        version: '5.7'
     includes: <%= yum_dists_with_57 %>
