WIP Support 5.7 on Trusty.

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -3,7 +3,7 @@ yum_dists_with_56 = %w(centos-6 centos-7 fedora-28 amazon-linux)
 suse_dists_with_56 = %w(opensuse-leap)
 apt_dists_with_56 = %w(ubuntu-14.04)
 yum_dists_with_57 = %w(centos-6 centos-7 fedora-28 fedora-latest)
-apt_dists_with_57 = %w(ubuntu-16.04 ubuntu-18.04)
+apt_dists_with_57 = %w(ubuntu-14.04 ubuntu-16.04 ubuntu-18.04)
 %>
 ---
 driver:
@@ -27,6 +27,7 @@ platforms:
   - name: opensuse-leap
     driver:
       box: bento/opensuse-leap-42
+  - name: ubuntu-14.04
   - name: ubuntu-16.04
   - name: ubuntu-18.04
   - name: amazonlinux
