MySQL 5.6 mirrors have been discontinued for any Fedora newer than 24.

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,5 +1,5 @@
 <%
-yum_dists_with_56 = %w(centos-6 centos-7 fedora-28 amazon-linux)
+yum_dists_with_56 = %w(centos-6 centos-7 amazon-linux)
 suse_dists_with_56 = %w(opensuse-leap)
 apt_dists_with_56 = %w(ubuntu-14.04)
 yum_dists_with_57 = %w(centos-6 centos-7 fedora-28 fedora-latest)
