--- a/kitchen.yml
+++ b/kitchen.yml
@@ -1,7 +1,7 @@
 <%
-yum_dists_with_56 = %w(centos-6 centos-7 fedora-28 amazon-linux)
+yum_dists_with_56 = %w(centos-7 fedora-28 amazon-linux)
 suse_dists_with_56 = %w(opensuse-leap)
-yum_dists_with_57 = %w(centos-6 centos-7 fedora-28 fedora-latest)
+yum_dists_with_57 = %w(centos-7 fedora-28 fedora-latest)
 apt_dists_with_57 = %w(ubuntu-16.04 ubuntu-18.04)
 %>
 ---
@@ -18,7 +18,6 @@ verifier:
   name: inspec
 
 platforms:
-  - name: centos-6
   - name: centos-7
   - name: debian-9
   - name: debian-10
