--- a/kitchen.yml
+++ b/kitchen.yml
@@ -6,6 +6,7 @@ apt_dists_with_56 = %w(ubuntu-14.04)
 yum_dists_with_57 = %w(centos-6 centos-7 fedora-28 fedora-latest)
 apt_dists_with_57 = %w(ubuntu-16.04 ubuntu-18.04)
 %>
+# yamllint disable-line
 driver:
   name: vagrant
   customize:
