--- a/kitchen.yml
+++ b/kitchen.yml
@@ -30,6 +30,7 @@ platforms:
       box: bento/opensuse-leap-42
   - name: ubuntu-16.04
   - name: ubuntu-18.04
+  - name: ubuntu-20.04
   - name: amazonlinux
     driver_config:
       box: mvbcoding/awslinux
