--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,11 +41,15 @@ jobs:
       matrix:
         os:
           - 'centos-7'
+          - 'centos-8'
           - 'ubuntu-1604'
           - 'ubuntu-1804'
+          - 'ubuntu-2004'
         suite:
           - 'installation-client-package-57'
+          - 'installation-client-package-80'
           - 'smoke57'
+          - 'smoke80'
       fail-fast: false
 
     steps:
